main/default/objects/Registration_Field_Configuration__mdt/Registration_Field_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Registration Field Configuration</label>
    <pluralLabel>Registration Field Configurations</pluralLabel>
</CustomObject>