main/default/objects/Registration_Field_Configuration__mdt/fields/Actual_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Actual_Field_Type__c</fullName>
    <label>Actual Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Lookup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>