main/default/objects/Registration_Field_Configuration__mdt/fields/Event_Picklist_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Picklist_Field_API_Name__c</fullName>
    <label>Event Picklist Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>