main/default/objects/Registration_Field_Configuration__mdt/fields/Has_null_picklist_value__c.field-meta.xml
<CustomField>
    <fullName>Has_null_picklist_value__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable &quot;-------&quot; default value for picklist fields.</inlineHelpText>
    <label>Has null picklist value?</label>
    <type>Checkbox</type>
</CustomField>