main/default/objects/Registration_Field_Configuration__mdt/fields/Message_when_Required__c.field-meta.xml
<CustomField>
    <fullName>Message_when_Required__c</fullName>
    <defaultValue>&quot;This field is required&quot;</defaultValue>
    <inlineHelpText>Displays this message when field is required</inlineHelpText>
    <label>Message when Required</label>
    <type>TextArea</type>
</CustomField>