main/default/objects/Registration_Field_Configuration__mdt/fields/Picklist_Options__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Options__c</fullName>
    <label>Picklist Options</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>