main/default/objects/Registration_Field_Configuration__mdt/fields/Use_event_field__c.field-meta.xml
<CustomField>
    <fullName>Use_event_field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Event Picklist Field?</label>
    <type>Checkbox</type>
</CustomField>