main/default/objects/Registration_Field_Configuration__mdt/fields/Use_Picklist_Field_from_related_object__c.field-meta.xml
<CustomField>
    <fullName>Use_Picklist_Field_from_related_object__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Picklist Field from related object</label>
    <type>Checkbox</type>
</CustomField>